[package]
name = "tfgrid_sdk_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
blake2 = "0.10"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
ipnet = "2.10"
md5 = "0.8"
parity-scale-codec = { version = "3.7", features = ["derive"] }
pbkdf2 = "0.12"
prost = "0.13"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
secp256k1 = { version = "0.29", features = ["global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subxt = { version = "0.44", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = { version = "0.44", features = ["subxt", "sr25519", "std"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
